# playwright-test

./: .gitignore  README.md  conftest.py  pyproject.toml  pytest.ini
common/: tools.py
config/: dev.yaml
fixtures/dev/: baidu_search.yaml
page/baidu/: baidu_page.py  baidu_search2_page.py  baidu_search_page.py
testcase/baidu/: baidu_search2_test.py  baidu_search_test.py  baidu_search_with_multi-browser_test.py  baidu_test.py
testcase/shopxo/: admin_login_test.py
